--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@ ul {
 }
 
 .slick-1 {
-    margin: 0 auto;
+    margin: 100px auto;
     width: 80%;
     position: relative;
     display: flex;
@@ -310,6 +310,12 @@ ul {
 .slick-1 img {
     width: 100%;
     height: auto;
+}
+
+
+.slick-prev:before,
+.slick-next:before {
+    color: #000;
 }
 
 #footer p {
