--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ ul {
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 .sub-title {
@@ -87,6 +88,7 @@ ul {
     float: left;
     z-index: 1;
     font-family: 'HiraginoSans-W1', sans-serif;
+    text-align: center;
 }
 
 .main-visual {
@@ -111,7 +113,7 @@ ul {
 
 #introduction {
     margin: 0 auto;
-    width: 1042px;
+    width: 1024px;
 }
 
 #introduction p {
@@ -128,6 +130,11 @@ ul {
 }
 
 .intro-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.intro-content-2 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -182,15 +189,23 @@ ul {
 
 #particles-js {
     width: 100vw;
-    height: 100vh;
+    /*    height: 130vh;*/
     background-color: #bad5f5;
     overflow: hidden;
+}
+
+#particles-js canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 #courses {
     margin: 0 auto;
     width: 100%;
-    position: absolute;
+    /*    position: absolute;*/
+    position: relative;
+    z-index: 100;
 }
 
 .coursess {
@@ -202,7 +217,8 @@ ul {
 
 .courses-main {
     width: 1200px;
-    overflow: auto;
+/*    overflow: auto;*/
+     overflow: hidden;
     margin-bottom: 40px;
     display: flex;
     justify-content: center;
@@ -218,7 +234,7 @@ ul {
     padding: 30px;
     margin: 20px 10px 10px 10px;
     border-radius: 12px;
-    float: left;
+/*    float: left;*/
 }
 
 .courses-con-img {
@@ -295,47 +311,33 @@ ul {
     align-items: center;
     text-align: center;
     padding-bottom: 45px;
+    z-index: 1;
 }
 
-
-
-/*
 .slider {
-    margin: 30px auto;
     width: 80%;
-    height: auto;
-}
-*/
-
-.slider{
-    width:80%;
-    margin: 0 auto;
+    margin: 0px auto;
     position: relative;
     z-index: 100;
 }
 
-/*
 .slider img {
     width: 100%;
     height: auto;
 }
-*/
+
 
 /*
+.slick-prev:before,
 .slick-next:before {
     color: #000;
 }
 */
 
-
-#Images{
+#Images {
     position: relative;
-    z-index: -1;
+    /*    z-index: -1;*/
 }
-
-
-
-
 
 #footer p {
     font-size: 14px;
@@ -346,22 +348,20 @@ ul {
     text-align: center;
 }
 
-
-
-.fuwatAnime { 
+.scrollcss {
     -webkit-animation-fill-mode: both;
     -ms-animation-fill-mode: both;
     animation-fill-mode: both;
     -webkit-animation-duration: 1.5s;
     -ms-animation-duration: 1.5s;
     animation-duration: 1.5s;
-    -webkit-animation-name: fuwatAnime;
-    -ms-animation-name: fuwatAnime;
-    animation-name: fuwatAnime;
+    -webkit-animation-name: scrollcss;
+    -ms-animation-name: scrollcss;
+    animation-name: scrollcss;
     visibility: visible !important;
 }
 
-@-webkit-keyframes fuwatAnime {
+@-webkit-keyframes scrollcss {
     0% {
         opacity: 0;
         -webkit-transform: translateY(-20px);
@@ -372,7 +372,7 @@ ul {
     }
 }
 
-@keyframes fuwatAnime {
+@keyframes scrollcss {
     0% {
         opacity: 0;
         -webkit-transform: translateY(-20px);
@@ -385,4 +385,81 @@ ul {
         -ms-transform: translateY(0);
         transform: translateY(0);
     }
-} 
+}
+
+@media all and (max-width: 1024px) {
+    #introduction {
+    width: 100vw;
+}
+
+
+
+    
+}
+
+@media all and (max-width: 480px) {
+    #header ul li a {
+        display: none;
+    }
+    .main-visual .main-title img {
+    width: 70vw;
+}
+    .sub-title p {
+    font-size: 15px;
+    padding-top: 20px;
+}
+        #Access{
+height: 400px;
+        
+}
+    #Access iframe {
+   position: relative;
+        width: 100%;
+        height: 67%;
+    padding-bottom: 0;
+        
+}
+    .intro-content {
+ flex-wrap: wrap;
+        margin-bottom: 50px;
+}
+.ic1-img img {
+    width: 90vw;
+    margin: 0;
+}
+
+.ic2-img img {
+    width: 90vw;
+    margin: 0;
+}
+       .intro-content-2{
+        flex-wrap: wrap-reverse;
+           margin-bottom: 50px;
+    }
+    
+    .courses-content {
+    width: 90px;
+    height: 175px;
+
+}
+
+.courses-con-img {
+    width: 75px;
+    height: 75px;
+
+}
+
+.courses-con-img img {
+    width: 50px;
+}
+    .courses-content a {
+font-size: 2px;
+    border-radius: 24px;
+
+}
+    
+    .courses-content h4 {
+padding-top: 20px;
+    font-size: 10px;
+}
+}
